--- a/Frameworks/JitsiMeetSDK.xcframework/ios-x86_64-simulator/JitsiMeetSDK.framework/assets/lang/main-zhCN.json
+++ b/Frameworks/JitsiMeetSDK.xcframework/ios-x86_64-simulator/JitsiMeetSDK.framework/assets/lang/main-zhCN.json
@@ -778,9 +778,9 @@
         "shareRoom": "邀请他人",
         "shortcuts": "查看快捷键",
         "speakerStats": "发言者状态",
-        "startScreenSharing": "开启屏幕共享",
+        "startScreenSharing": "投屏",
         "startSubtitles": "开启字幕",
-        "stopScreenSharing": "停止屏幕共享",
+        "stopScreenSharing": "停止投屏",
         "stopSubtitles": "关闭字幕",
         "stopSharedVideo": "停止YouTube视频",
         "talkWhileMutedPopup": "您在尝试发言吗? 当前您已被静音。",
