--- a/Frameworks/JitsiMeetSDK.xcframework/ios-x86_64-simulator/JitsiMeetSDK.framework/assets/lang/main-enGB.json
+++ b/Frameworks/JitsiMeetSDK.xcframework/ios-x86_64-simulator/JitsiMeetSDK.framework/assets/lang/main-enGB.json
@@ -613,7 +613,7 @@
             "videomute": "Toggle mute video",
             "videoblur": "",
             "privateMessage": "Send private message",
-            "muteEveryone": "Mute everyone",
+            "muteEveryone": "静音其他人",
             "moreOptions": "Show more options",
             "help": "Help",
             "download": "Download our apps"
