--- a/Frameworks/JitsiMeetSDK.xcframework/ios-x86_64-simulator/JitsiMeetSDK.framework/assets/lang/main-zhCN.json
+++ b/Frameworks/JitsiMeetSDK.xcframework/ios-x86_64-simulator/JitsiMeetSDK.framework/assets/lang/main-zhCN.json
@@ -241,6 +241,9 @@
         "muteParticipantButton": "静音",
         "muteParticipantDialog": "您确定要将此参与者静音吗？您将无法取消静音，但他们可以随时取消静音。",
         "muteParticipantTitle": "静音该与会者吗？",
+        "muteParticipantsVideoButton": "禁用摄像头",
+        "muteParticipantsVideoTitle": "关闭该参与者的摄像头?",
+        "muteParticipantsVideoBody": "你无法重新打开摄像头，但他们可以随时打开摄像头。",
         "Ok": "好的",
         "passwordLabel": "$t(lockRoomPasswordUppercase)",
         "passwordNotSupported": "不支持设置会议密码。",
@@ -403,12 +406,12 @@
         "changeSignIn": "切换帐号",
         "choose": "选择一个直播流",
         "chooseCTA": "请选择直播选项。您现在以 {{email}} 身份登录。",
-        "enterStreamKey": "在此输入您的 YouTube 串流密钥。",
+        "enterStreamKey": "在此输入您的 流媒体 串流密钥。",
         "error": "流媒体直播失败。请重试。",
-        "errorAPI": "在访问您的 YouTube 直播服务时发生问题。请重新登录。",
+        "errorAPI": "在访问您的 流媒体 直播服务时发生问题。请重新登录。",
         "errorLiveStreamNotEnabled": " {{email}} 未启用流媒体直播。请使用流媒体直播或登录启用了流媒体直播的帐户。",
         "expandedOff": "流媒体直播已被关闭",
-        "expandedOn": "会议当前正在YouTube上直播。",
+        "expandedOn": "会议当前正在流媒体上直播。",
         "expandedPending": "启动直播中。。。",
         "failedToStart": "直播服务启动失败",
         "getStreamKeyManually": "我们无法获取任何直播。尝试从YouTube获取流媒体直播密钥。",
@@ -421,13 +424,13 @@
         "serviceName": "直播服务",
         "signedInAs": "您当前登录为：",
         "signIn": "使用谷歌登录",
-        "signInCTA": "输入 YouTube 串流密钥或者登录 YouTube 帐号。",
+        "signInCTA": "输入 流媒体 串流密钥或者登录 流媒体 帐号。",
         "signOut": "登出",
-        "start": "开始",
+        "start": "直播",
         "streamIdHelp": "这是什么？",
         "unavailableTitle": "流媒体直播不可用",
-        "youtubeTerms": "YouTube 服务条款",
-        "googlePrivacyPolicy": "Google 隐私权政策"
+        "youtubeTerms": "流媒体 服务条款",
+        "googlePrivacyPolicy": "流媒体 隐私权政策"
     },
     "localRecording": {
         "clientState": {
@@ -638,7 +641,7 @@
         "speakers": "发言人",
         "startAudioMuted": "所有人开始时静音",
         "startVideoMuted": "所有人开始时隐藏视频画面",
-        "title": "抬头"
+        "title": "仰头"
     },
     "settingsView": {
         "advanced": "高级",
@@ -717,7 +720,7 @@
             "remoteMute": "静音与会者",
             "security": "安全选项",
             "Settings": "显示 / 隐藏 设置",
-            "sharedvideo": "开启 / 关闭 YouTube 影片分享",
+            "sharedvideo": "开启 / 关闭 爱奇艺 影片分享",
             "shareRoom": "邀请他人",
             "shareYourScreen": "开启 / 关闭 屏幕分享",
             "shortcuts": "切换快捷方式",
@@ -774,7 +777,7 @@
         "raiseYourHand": "举手",
         "security": "安全选项",
         "Settings": "设置",
-        "sharedvideo": "分享YouTube视频",
+        "sharedvideo": "分享爱奇艺视频",
         "shareRoom": "邀请他人",
         "shortcuts": "查看快捷键",
         "speakerStats": "发言者状态",
@@ -782,7 +785,7 @@
         "startSubtitles": "开启字幕",
         "stopScreenSharing": "停止投屏",
         "stopSubtitles": "关闭字幕",
-        "stopSharedVideo": "停止YouTube视频",
+        "stopSharedVideo": "停止爱奇艺视频",
         "talkWhileMutedPopup": "您在尝试发言吗? 当前您已被静音。",
         "tileViewToggle": "画面模式",
         "toggleCamera": "切换相机",
